; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_spi.c_spi_unregister_master.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_spi.c_spi_unregister_master.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_master = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@__unregister = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spi_unregister_master(%struct.spi_master* %0) #0 {
  %2 = alloca %struct.spi_master*, align 8
  %3 = alloca i32, align 4
  store %struct.spi_master* %0, %struct.spi_master** %2, align 8
  %4 = load %struct.spi_master*, %struct.spi_master** %2, align 8
  %5 = getelementptr inbounds %struct.spi_master, %struct.spi_master* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.spi_master*, %struct.spi_master** %2, align 8
  %9 = getelementptr inbounds %struct.spi_master, %struct.spi_master* %8, i32 0, i32 0
  %10 = load i32, i32* @__unregister, align 4
  %11 = call i32 @device_for_each_child(i32 %7, %struct.TYPE_3__* %9, i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load %struct.spi_master*, %struct.spi_master** %2, align 8
  %13 = getelementptr inbounds %struct.spi_master, %struct.spi_master* %12, i32 0, i32 0
  %14 = call i32 @device_unregister(%struct.TYPE_3__* %13)
  ret void
}

declare dso_local i32 @device_for_each_child(i32, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @device_unregister(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
